--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-market",
+  "name": "carrot-market",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +8,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.10",
+    "@prisma/client": "^3.9.1",
+    "@sendgrid/mail": "^7.6.1",
+    "@tailwindcss/forms": "^0.4.0",
+    "babel-core": "^6.26.3",
+    "next": "^12.0.8",
     "react": "^18.0.0-rc.0",
-    "react-dom": "^18.0.0-rc.0"
+    "react-dom": "^18.0.0-rc.0",
+    "react-hook-form": "^7.26.0",
+    "twilio": "^3.74.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@types/node": "17.0.10",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "prisma": "^3.9.0",
+    "styled-jsx": "^5.0.0",
+    "tailwindcss": "^3.0.15",
     "typescript": "4.5.5"
   }
 }
