--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@sendgrid/mail": "^7.6.1",
     "@tailwindcss/forms": "^0.4.0",
     "babel-core": "^6.26.3",
-    "next": "^12.0.8",
+    "iron-session": "^6.0.5",
+    "next": "^12.0.10",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "react-hook-form": "^7.26.0",
