--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.0.0-rc.0",
     "react-hook-form": "^7.26.0",
     "swr": "^1.2.1",
+    "ts-node": "^10.6.0",
     "twilio": "^3.74.0"
   },
   "devDependencies": {
@@ -33,5 +34,8 @@
     "styled-jsx": "^5.0.0",
     "tailwindcss": "^3.0.15",
     "typescript": "4.5.5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
